# gazebo_slave

./: README.md
src/slave_control/: CMakeLists.txt  package.xml
src/slave_control/config/: slave_gazebo_control.yaml  slave_gazebo_joint_states.yaml  trajectory_control.yaml
src/slave_control/launch/: gazebo_moveit.launch  shiyan.launch  slave_gazebo_control.launch  slave_gazebo_states.launch  slave_trajectory_controller.launch
src/slave_description/urdf/: materials.xacro  slaved_arm.gazebo  ttrobot.xacro
src/slave_gazebo/: CMakeLists.txt  package.xml
src/slave_gazebo/launch/: slave_world.launch  testrobot_world.launch
src/slave_gazebo/worlds/: slave.world
src/testrobot_description/: CMakeLists.txt  package.xml
src/testrobot_description/launch/: display.launch  gazebo.launch  urdf.rviz
src/testrobot_description/urdf/: materials.xacro  slaved_arm.gazebo  slaved_arm.srf  slaved_arm.urdf  ttrobot.xacro  useless.urdf
src/testrobot_gazebo/: CMakeLists.txt  package.xml
src/testrobot_gazebo/launch/: shiyan.launch
src/testrobot_gazebo/worlds/: pioneer2dx
