<?xml version="1.0"?>
<package>
  <name>slave_control</name>
  <version>0.0.0</version>
  <description>The slave_control package</description>

  <maintainer email="davetcoleman@gmail.com">Dave Coleman</maintainer>

  <license>TODO</license>
  <author email="davetcoleman@gmail.com">Dave Coleman</author>

   <buildtool_depend>catkin</buildtool_depend>
   <build_depend>gazebo_msgs</build_depend>
   <build_depend>gazebo_plugins</build_depend>
   <build_depend>gazebo_ros</build_depend>
   <build_depend>gazebo_ros_control</build_depend>
   <run_depend>gazebo_msgs</run_depend>
   <run_depend>gazebo_plugins</run_depend>
   <run_depend>gazebo_ros</run_depend>
   <run_depend>gazebo_ros_control</run_depend>
 

  <export>
  </export>

</package>
